gccida/g1/get_attr_i387
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13655:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v3; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13658:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v6; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13660:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v8; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13662:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v10; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13664:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type v12; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13666:1: error: must use 'enum' tag to refer to type 'attr_type'
attr_type attr_type; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13676:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13681:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 13438, "get_attr_i387"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13681:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 13438, "get_attr_i387"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13821:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v15 = mult_operator( recog_data_0.operand[3], SFmode); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13835:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v13 = mult_operator( recog_data_0.operand[3], SFmode); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13851:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v11 = mult_operator( recog_data_0.operand[3], DFmode); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13865:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v9 = mult_operator( recog_data_0.operand[3], DFmode); 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13883:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v7 = mult_operator( recog_data_0.operand[3], XFmode); 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/insn-attrtab.c:13901:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v5 = mult_operator( recog_data_0.operand[3], TFmode); 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_i387/src/obj/insn-attrtab.o] Error 1
